<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="0.03"
        android:background="@drawable/calender_topdown_back" >

        <DigitalClock
            android:id="@+id/digitalClock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true" />

        <ImageView
            android:id="@+id/add_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/day_view" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_weight="0.02"
        android:background="@drawable/new_reminder"
        android:orientation="vertical" >

         
         <TextView 
                    android:id="@+id/top_text"
            		android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:textSize="24sp" 
                    android:textStyle="bold"
                    android:singleLine="true" 
                    android:textColor="#000080"
                    android:textIsSelectable="true"
                    />

            </LinearLayout>
            
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.30"
        android:background="@drawable/calender_topdown_back" >

        <LinearLayout
            android:id="@+id/addReminderView"
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/Description"
                android:textColor="#000080"
                android:textIsSelectable="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"/>
                
                            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:text="@string/Date"
                android:textColor="#000080"
                android:textIsSelectable="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:singleLine="true"
                android:text="@string/Time"
                android:textColor="#000080"
                android:textIsSelectable="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

        </LinearLayout>
            
        </ScrollView>


    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/calender_topdown_back" >

        <ImageView
            android:id="@+id/remind_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/view_event" />
        
    </RelativeLayout>
    <!--
      android:layout_toLeftOf="@+id/imageButton2"
            android:layout_toRightOf="@+id/imageButton1"
    -->

</LinearLayout>